Fixed-overflow

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ footer {
     left: 0;
     right: 0;
     color: #fff;
-    height: 55vh;
+    height: 60vh;
 }
 footer .footer {
     position: relative;
